basically finished reflection relations, need to make them more fault tolerant