@@ -1,6 +1,7 @@
 
 ;; example relations: reflection
 
+;; TODO: make it fault tolerant
 (ns hoeck.rel.reflection
   (:use hoeck.rel
         hoeck.library
@@ -8,6 +9,7 @@
         clojure.contrib.pprint)
   (:import (java.io File, FileInputStream)
            (java.util.jar JarInputStream, JarEntry)
+	   (java.util.regex Pattern)
            (java.lang.instrument IllegalClassFormatException)
 	   (java.lang.reflect Modifier)))
 
@@ -20,6 +22,9 @@
         (catch IllegalClassFormatException e# nil)
         (catch ClassNotFoundException e# nil)))
 
+
+;; helpers
+
 (let [primitive-types {'boolean Boolean/TYPE
                        'int     Integer/TYPE
                        'float   Float/TYPE
@@ -29,19 +34,20 @@
                        'char    Character/TYPE
                        'short   Short/TYPE
                        'void    Void/TYPE}] ;; or use nil for void??
-  (def sym->class 
+  (def getclass
 ;;    "Converts a symbol or string to a java.lang.Class. Works for primitive types too.
 ;;  Returns nil if class named by s doesn't exist.."
        (memoize (fn [s]
                   (and s
                        (or (primitive-types (symbol s))
-                           (try-ignore (Class/forName (str s)))))))))
+			   ;;(try-ignore (Class/forName (str s)))
+			   (Class/forName (str s))))))))
 
-(def class->sym
+(def classname
 ;;  "Converts a Class to a Symbol. For arrays, returns the component name."
   (memoize (fn [#^Class c]
              (if (.isArray c)
-               (class->sym (.getComponentType c))
+               (classname (.getComponentType c))
                (symbol (.getName c))))))
 
 (defn get-static-value [field]
@@ -49,6 +55,9 @@
     (when (and (java.lang.reflect.Modifier/isStatic (.getModifiers field))
 	       (java.lang.reflect.Modifier/isPublic (.getModifiers field)))
       (.get field parent))))
+
+
+;; fields
 
 (defn class-fields
   "Return a relation of class fields"
@@ -91,275 +100,162 @@
          (reduce +))))
 
 
-;; classpath
+;; namespaces
+
+(defn namespaces [] (relation :name (map ns-name (all-ns))))
+
+(defn fjoin-with-ns [ns-rel ns-f relation-f] (fjoin ns-rel #(let [a (-> % :name find-ns ns-f)] (relation-f a))))
+(defn aliases [ns-rel] (fjoin-with-ns ns-rel ns-aliases #(relation :alias (keys %) :aliased-name (map ns-name (vals %)))))
+(defn refers [ns-rel]  (fjoin-with-ns ns-rel ns-refers  #(relation :symbol (keys %) :var (vals %))))
+(defn interns [ns-rel] (fjoin-with-ns ns-rel ns-interns #(relation :symbol (keys %) :var (vals %))))
+(defn publics [ns-rel] (fjoin-with-ns ns-rel ns-publics #(relation :symbol (keys %) :var (vals %))))
+(defn imports [ns-rel] (fjoin-with-ns ns-rel ns-imports #(relation :symbol (keys %) :class (map class->sym (vals %)))))
+
+
+;; files
 
 (defn classpaths []
   (union (project (relation :path (list-classpaths)) * [:normal :type])
          (project (relation :path (list-bootclasspaths)) * [:boot :type])))
 
+(defn- file-tuple [#^File f]
+  {:file (.getName f)
+   :path (.getParent f)
+   :time (.lastModified f)
+   :directory (.isDirectory f)
+   :size (.length f)})
 
-;; namespaces
-
-(defn namespaces [] (project (relation [:ns] (all-ns)) :ns [(ns-name ~ns) :name]))
-(defn aliases [nsr] (project (fjoin nsr #(relation [[:alias :full]] (ns-aliases (:ns %)))) :ns :alias :full))
-(defn refers [nsr] (fjoin nsr #(relation [[:symbol :full]] (ns-refers (:ns %)))))
-(defn interns [])
-(defn publics [])
-(defn imports [])
-
-;; files
-
-(defn make-file-R
-  "Given one or more existing paths, returns a relation of all files below this path
+(defn files
+  "Given a relation containg a :path field, return a relation of all files below those paths
   using `clojure.core/file-seq'."
-  [path-seq]
-  (make-relation (map (fn [#^File f] {:name (.getName f)
-                                      :path (.getParent f)
-                                      :time (.lastModified f)
-                                      :directory (.isDirectory f)
-                                      :size (.length f)})
-                      
-                      (mapcat (fn [#^File f] (file-seq f))
-                              (filter #(.exists #^File %)
-                                      (map #(File. #^String %) path-seq))))))
+  [path-relation] 
+  (fjoin path-relation 
+	 #(let [f (-> % :path File.)]
+	    (when (.exists f) (map file-tuple (file-seq f))))))
 
-(defn- read-files-from-jar
+(defn- jar-entry-tuple [#^JarEntry je] ;; java.util.jar.jarEntry
+  {:name (.getName je)
+   :size (.getSize je)
+   :compressed-size (.getCompressedSize je)
+   :time (.getTime je)
+   :comment (.getComment je)
+   :directory (.isDirectory je)})
+
+(defn- jar-entries
+  "Return a seq of JarEntry(ies)."
   [pathname filename]
-  (let [inp (JarInputStream. (FileInputStream. (str pathname File/separator filename)))
-        files (doall (take-while identity (repeatedly #(.getNextJarEntry inp))))]
-    (.close inp)
-    (map (fn [#^JarEntry je] ;; java.util.jar.jarEntry
-           {:path pathname
-            :jar filename
-            :name (.getName je)
-            :size (.getSize je)
-            :compressed-size (.getCompressedSize je)
-            :time (.getTime je)
-            :comment (.getComment je)
-            :directory (.isDirectory je)})
-         files)))
+  (with-open [inp (JarInputStream. (FileInputStream. (str pathname File/separator filename)))]
+    (doall (take-while identity (repeatedly #(.getNextJarEntry inp))))))
 
-(defn make-jar-R
-  "Given a file-R, return a relation of all entries from the jars
-  of the file-R."
-  [file-R]
-  (make-relation (mapcat #(read-files-from-jar (:path %) (:name %))
-                         (select file-R (rlike ".*\\.jar$" ~name)))
-                 :fields [:path :jar :name :size :compressed-size :time :comment :directory]))
+(defn jars
+  "Given a file-relation (containing :path and :file fields), return a relation
+  of all entries from jars mentioned in the file-relation"
+  [file-relation]
+  (fjoin (-> file-relation
+	     (select (re-matches #"^.*\.jar$" ~file))
+	     (project :path :file)
+	     (rename :file :jar))
+	 #(map jar-entry-tuple (jar-entries (:path %) (:jar %)))))
 
-(defn- path->package
-  ([#^String path]
-     (.replace path File/separatorChar \.))
-  ([classpaths #^String path]
-     ;; should be a functional join over the classpath-rel
-     ;; may return more than one possible packagename (if one classpath contains another)
-     (if (and path (string? path))
-       (let [possible-classpaths (filter #(.startsWith path %) classpaths)
-             extract-packagename (fn [cp] (.replace (let [s (.substring path (count cp))]
-                                                      (if (.startsWith s File/separator)
-                                                        (.substring s 1 (count s))
-                                                        s))
-                                                    File/separatorChar 
-                                                    \.))]
-         (map extract-packagename possible-classpaths)))))
-
-(defn- without-dotclass
-  "removes the trailing \".class\" from a string."
-  [#^String s]
-  (and s (string? s) (.substring s 0 (- (count s) 6))))
-
-;; classnames
-
-(defn- classnames-from-files
-  "Given a file relation, "
-  [cp-relation file-relation]
-  (let [classfiles (select file-relation (rlike ".*\\.class$" ~name))
-        cp (field-seq cp-relation :path)]
-    (pipe (project classfiles :path :name)
-          (mapcat (fn [tup] (map #(str % "." (without-dotclass (:name tup)))
-                                 (path->package cp (:path tup)))))
-          (filter sym->class))))
-
-;; assume classpath inside the jar to be .; (ignore the MANIFESTs classpath-line)
-(defn- classnames-from-jars ;; assume jar-R contains only jars on the classpath
-  [jar-R]
-  (let [classfiles (field-seq (select jar-R (and (not ~directory) (rlike ".*\\.class$" ~name)))
-                              :name)]
-    (map #(.replace #^String (without-dotclass %) \/ \.) classfiles)))
-
-(defn- classnames-from-ns
-  "Given the ns-imports relation, return all mentioned classes."
-  [ns-imports-R]
-  (let [classes (field-seq ns-imports-R :class)]
-    (reduce conj  
-            #{}
-            classes
-            ;(concat classes (mapcat supers classes))
-            )))
-
-(defn- find-classnames
-  [ns-imports-R, file-R, jar-R, classpath-R]
-  (clojure.set/union (classnames-from-ns ns-imports-R)
-                     (classnames-from-files classpath-R file-R)
-                     (classnames-from-jars jar-R)))
 
 ;; classes
 
+(defn- classnames-from-jars [jars]
+  (project (fjoin (select jars (re-matches #"^.*\.class$" ~name))
+		  #(let [n (:name %)
+			 p (.lastIndexOf (:name %) "/")]
+		     [{:class (.replace (.substring n 0 (- (count n) 6)) \/ \.)}]))
+	   :class :path :jar))
+
+(let [;; sep-regex Pattern/quote File/separator) <- the good way
+      sep-regex #"\\|/" ;; the bad way
+      p (re-pattern sep-regex)]
+  (defn tokenize-path [s]    
+    (seq (.split p s))))
+
+(defn match-heads [src comp] ;; (match-heads '(a b c) '(a)) -> (b c)
+  (let [m (map = src comp)]
+    (when (every? identity m)
+      (drop (count m) src))))
+
+(defn- classnames-from-classpaths [classpaths, files]  
+  (project (fjoin (project (select files (re-matches #"^.*\.class$" ~file))
+			   [(.substring ~file 0 (- (count ~file) 6)) :class]
+			   [(tokenize-path ~path) :path])
+		  #(relation :package (remove nil? (map (partial match-heads (:path %)) (map tokenize-path (map :path classpaths))))))
+	   [(apply str (interpose "." (concat ~package [~class]))) :class]))
+
+(defn classnames
+  "Return a relation with names of all known classes."
+  ([] (classnames (classpaths)))
+  ([classpaths] (classnames classpaths (files classpaths)))
+  ([classpaths files] (classnames classpaths files (jars)))
+  ([classpaths files jars]
+     ;; try loading all classes from all known locations     
+     (union (project (classnames-from-classpaths classpaths files) :class)
+	    (project (classnames-from-jars jars) :class))))
+
+
+;; reflection
+
 (defn- class-tuple
-  "Creates a tuple from a java.lang.Class object."
-  [cname #^Class c]
-  {:class cname
-   :type (cond (.isEnum c) :enum
-               (.isInterface c) :interface
-               (try-ignore (.isAnonymousClass c)) :anonymous
-               ;(.isLocalClass c) :local
-               (.isPrimitive c) :primitive
-               ;.isSynthetic c) :synthetic
-               :else :class)
-   :super (if-let [n (.getSuperclass c)]
-            (class->sym n))
-   :modifiers (.getModifiers c)})
+  [classname]
+  (let [c (getclass classname)]
+    {:class classname
+     :type (cond (.isEnum c) :enum
+		 (.isInterface c) :interface
+		 (.isPrimitive c) :primitive
+		 :else :plain)     
+     :modifiers (.getModifiers c)}))
 
-(defn make-class-R [classname-seq]
-  (def _classname-seq classname-seq)
-  (make-relation (magic-map (fn ([] classname-seq)
-                                ([cname] (class-tuple cname (sym->class cname)))))
-                 :key :class
-                 :fields (keys (class-tuple 'String String))))
+(defn classes [classnames]
+  (->> classnames
+       (map :class)
+       (map class-tuple)
+       (set)))
 
-(defn- class-interfaces [cname]
-  (map (fn [#^Class i] {:interface (symbol (.getName i))
-                        :class cname})
-       (seq (.getInterfaces (sym->class cname)))))
+(defn class-hierarchy [classes]
+  (-> classes
+      (project :class)
+      (fjoin #(relation :super (map classname 
+				    (remove nil? (let [c (getclass (:class %))]
+						   (cons (.getSuperclass c) (.getInterfaces c)))))))))
 
-(defn make-interface-R [classname-seq]
-  (make-relation (magic-map (fn ([] (filter #(let [c (sym->class %)] (and c (not= 0 (count (.getInterfaces c)))))
-                                            classname-seq))
-                                ([cname] (set (class-interfaces cname)))))
-                 :key :class
-                 :fields [:interface :class]))
+(defn- method-tuple [#^java.lang.reflect.Method m]
+  {:method (symbol (.getName m))
+   :type (classname (.getReturnType m))
+   :array (.isArray (.getReturnType m))
+   :args (map classname (.getParameterTypes m))
+   :modifiers (.getModifiers m)})
 
-(defn- class-methods [cname]
-  (map (fn [#^java.lang.reflect.Method m]
-         {:class cname ;; declaring-class
-          ;:declaring-class (symbol (.getName (.getDeclaringClass m)))
-          :name (symbol (.getName m))
-          :arity (count (try-ignore (.getParameterTypes m)))
-          :returntype (try-ignore (class->sym (.getReturnType m)))
-          :returns-array (try-ignore (.isArray (.getReturnType m)))
-          :modifiers (.getModifiers m)})
-       (seq (try-ignore (.getDeclaredMethods #^Class (sym->class cname))))))
+(defn class-methods [classname]
+  (fjoin (relation :class [classname])
+	 #(map method-tuple (seq (.getDeclaredMethods (getclass (:class %)))))))
 
-(defn make-method-R [classname-seq]
-  (make-relation (magic-map (fn ([] (filter #(< 0 (count (try-ignore (.getDeclaredMethods (sym->class %))))) classname-seq))
-                                ([cname] (set (class-methods cname)))))
-                 :key :class
-                 :fields (keys (first (class-methods 'java.lang.Object)))))
+(defn all-methods [classnames]
+  (fjoin classnames #(class-methods (:class %))))
 
-(defn- method-args [cname]
-  (mapcat (fn [#^java.lang.reflect.Method m]
-            (let [m-args (.getParameterTypes m)
-                  m-args-count (count m-args)
-                  m-name (symbol (.getName m))]
-              (map (fn [#^Class c p] {:class cname
-                                      :method m-name
-                                      :arity m-args-count
-                                      :type (class->sym c)
-                                      :position p})
-                   m-args
-                   (range m-args-count))))
-          (try-ignore (.getDeclaredMethods #^Class (sym->class cname)))))
+(defn all-fields [classnames]
+  (fjoin classnames #(class-fields (getclass (:class %)))))
 
-(defn make-method-args-R [classnames]
-  (make-relation (magic-map (fn ([] classnames)
-                                ([cname] (set (method-args cname)))))
-                 :key :class
-                 :fields (keys (first (method-args 'java.lang.Object)))))
-
-(defn find-more-classes 
-  "Look in all reflection relations for not-yet seen classses,
-  eg. returnvalues from methods, method-args, interfaces."
-  [relation-map]
-  (binding [*relations* relation-map]
-    (field-seq (let [classes (project :classes :class)]
-                 (difference (union (rename (project :interfaces :interface) :interface :class)
-                                    (rename (project :imports :import) :import :class)
-                                    (rename (project :method-args :type) :type :class)
-                                    (rename (project :methods :returntype) :returntype :class))
-                             classes))
-                :class)))
-
-(defn make-file-relations [initial-paths file-filter-regex]
-  (let [classpath-rel (make-classpath-R)
-        file-rel (let [fr (make-file-R initial-paths)]
-                   (if-let [rx file-filter-regex]
-                     (select fr (rlike rx ~name))
-                     fr))
-        jar-rel (make-jar-R (select file-rel
-                                    (and (rlike ".*\\.jar$" ~name) ;; be shure to catch only jars on the classpath
-                                         (contains? classpath-rel {:path (str ~path File/separator ~name)}))))]
-    [classpath-rel file-rel jar-rel]))
-
-(def make-file-relations-mem (memoize make-file-relations))
-
-(defn make-reflection-relations
-  "Loading all clojure&java6-classes (23K tuples) needs about 110Mb of PermGen space and about 35MB Heap."
-  ([& opts]
-     (let [opts (as-keyargs opts {:files (concat (list-classpaths) (list-bootclasspaths))
-                                  :filename-filter-regex nil
-                                  :namespaces (all-ns)})
-
-           ;; namespace relations (clojure)
-           ns-rel (make-namespace-R (:namespaces opts))
-           imports-rel (make-ns-imports-R ns-rel)
-           aliases-rel (make-ns-aliases-R ns-rel)
-           refers-rel (make-ns-refers-R ns-rel)
-           interns-rel (make-ns-interns-R ns-rel)
-           publics-rel (make-ns-publics-R ns-rel)
-           
-           ;; files
-           [classpath-rel file-rel jar-rel] (make-file-relations-mem (:files opts) (:filename-filter-regex opts))
-           ;; java reflection
-           classnames (map class->sym (remove nil? (map sym->class (find-classnames imports-rel file-rel jar-rel classpath-rel)))) ;; only loadable classes
-           class-rel (make-class-R classnames)
-           method-rel (make-method-R classnames)
-           method-args-rel (make-method-args-R classnames)
-           interfaces-rel (make-interface-R classnames)]
-
-       {:namespace ns-rel
-        :imports imports-rel
-        :aliases aliases-rel
-        :refers refers-rel
-        :interns interns-rel
-        :publics publics-rel
-        
-        :classpaths classpath-rel
-        :files file-rel
-        :jars jar-rel
-
-        :classes class-rel
-        :interfaces interfaces-rel
-        :methods method-rel
-        :method-args method-args-rel})))
-
-(defn load-reflection-relations
-  ([path]
-     (into {} (map #(vector (key %) (make-relation (with-in-reader (val %)) (read)))
-                   (file-map path
-                             #"^reflection-(.*)\.clj$")))))
-
-(defn save-reflection-relations 
-  ([path] (save-reflection-relations path *relations*))
-  ([path relations] 
-     (dorun (map #(save-relation (relations %)
-                                 (str path File/separator "reflection-" (name %) ".clj"))
-                 ;;(list :classpaths :files :jars :classes :interfaces :methods :method-args)
-                 (keys *relations*)))
-     nil))
-
-(defn missing-classes? [relations]
-  (< (count (:classes relations))
-     (count (find-more-classes relations))))
+(defn make-reflection-relations []
+  ;;"Loading all clojure&java6-classes (23K tuples) needs about 110Mb of PermGen space and about 35MB Heap."
+  (let [cp (classpaths)
+	fs (files cp)
+	js (jars fs)
+	cn (classnames cp fs js)
+	c (classes cn)
+	ch (class-hierarchy c)
+	m (all-methods cn)
+	f (all-fields cn)]
+    {:classpaths cp
+     :files fs
+     :jars js
+     :classnames cn
+     :classes c
+     :class-hierarchy ch
+     :methods m
+     :fields f}))
 
 (def reflection-relations (delay (make-reflection-relations)))
 
@@ -368,76 +264,9 @@
      ~@body))
 
 (comment
-;; some examples of using relations to query the java reflection interface
-
-;; load many libs
-(require '(clojure.contrib duck-streams sql command_line cond def duck_streams
-                             except fcase import_static javalog lazy_seqs lazy_xml
-                             mmap ns_utils seq_utils sql str_utils test_clojure
-                             test_is trace zip_filter))
-
-;; Loading all clojure&java6-classes (23K tuples) needs about 110Mb of PermGen space and about 35MB Heap.
-;; increase PermGen space with the: "-XX:MaxPermSize=256m" jvm flag
-
-;; print all accessible relations in a map rel-name -> fields
-(with-relations (pprint (into {} (field-map (relations) :relation :field))))
-
-;; example: private definitions in the hoeck.rel.reflection namespace
-(with-relations (select (difference :interns :publics) (= ~ns 'hoeck.rel.reflection)))
-
-;; class relation
-(with-relations (*relations* :classes))
-
-;; pretty-printing
-(format "by default, only %d tuples of a relation are printed" (*pretty-print-relation-opts* :max-lines))
-
-;; files on the classpath
-(with-relations
- (order-by
-  (project :files [(/ ~size 1000.0) :size-in-kb] :name :path)
-  :size-in-kb
-  '>))
-
-;; jars
-(with-relations (project (select :files (like '*.jar ~name)) :name :path))
-
-;; jars that are mentioned in the classpath
-(with-relations (join
-                 (project (select :files (rlike ".*\\.jar$" ~name))
-                          [(str ~path File/separator ~name) :path])
-                 :path
-                 :classpaths
-                 :path))
-
-;; relations are first-class
-(do (with-relations (def java-lang-classes (select :classes (rlike "^java\\.lang\\.[A-Z].*" ~class))))
-    (defn without-inner-classes [classes-rel]
-      (select classes-rel (rlike "[^\\$]*" ~class))))
-
-;; number of classes in the java.lang package
-(count (without-inner-classes java-lang-classes))
-
-;; all inner classes in the java.lang package
-;; (takes some time to compute, calculates all indexes over the :classes relation due to poor difference implementation)
-(count (difference java-lang-classes (without-inner-classes java-lang-classes)))
-
-;; interfaces in the java lang package
-(with-relations (select :classes (and (rlike "^java\\.lang\\.[A-Z].*" ~class) (= :interface ~type))))
-;; or 
-(select java-lang-classes (= :interface ~type))
-
-;; definition of the interface relation
-(with-relations (fields :interfaces))
-
-;; number of implemented interfaces 
-(with-relations (count (project :interfaces :interface)))
-
-;; total number of interfaces
-(with-relations (count (select :classes (= ~type :interface))))
-
-;; all classes (directly) implementing clojure.lang.IFn
-(with-relations (pprint (field-seq (select :interfaces (= 'clojure.lang.IFn ~interface)) :class)))
-
+  ;; some examples of using relations to query the java reflection interface
+  
+  
 )
 
 
